spark_history_server/templates/spark-history-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spark-history-server
  namespace: ${spark_namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      name: spark-history-server
      labels:
        app: spark-history-server
      namespace: ${spark_namespace}
    spec:
      serviceAccountName: ${spark_service_account}
%{ if length(node_selector) != 0 ~}
      nodeSelector:
%{ for key,value in node_selector ~}
        ${key}: ${value} 
%{ endfor ~}
%{ else  ~}
      nodeSelector: {}
%{ endif ~}
      containers:
        - name: spark-history-server
          image: ${history_server_spark_image}

          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
          
          args:
          - '/opt/spark/sbin/start-history-server.sh'
          
          volumeMounts:
          - name: config-volume
            mountPath: /opt/spark/conf/spark-defaults.conf
            subPath: spark-defaults.conf

          ports:
            - name: http
              protocol: TCP
              containerPort: 18080

          readinessProbe:
            timeoutSeconds: 4
            httpGet:
              path: /
              port: http

          livenessProbe:
            timeoutSeconds: 4
            httpGet:
              path: /
              port: http
      volumes:
        - name: config-volume
          configMap:
            name: spark-history-server-config
