spark_history_server/templates/spark-history-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: ${spark_namespace}
spec:
  selector:
    app: spark-history-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 18080
