spark_history_server/templates/spark-history-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${certificate_issuer}
    kubernetes.io/ingress.class: nginx
  name: spark-history-server
  namespace: ${spark_namespace}
spec:
  rules:
  - host: spark.${domain}
    http:
      paths:
      - backend:
          service:
            name: spark-history-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - spark.${domain}
    secretName: spark-history-general-tls
